refactor based on pawsonthedash work

--- a/web/templates/component.theme-switch.templ
+++ b/web/templates/component.theme-switch.templ
@@ -1,4 +1,4 @@
-package components
+package templates
 
 templ ThemeSwitch() {
 	<button
@@ -7,6 +7,7 @@ templ ThemeSwitch() {
 		aria-label="auto"
 		aria-live="polite"
 		_="on click toggle .dark on body"
+		style="max-width: 2rem;"
 	>
 		<svg
 			class="sun-and-moon logo"
