--- a/api/experience/experience.templ
+++ b/api/experience/experience.templ
@@ -1,14 +1,12 @@
 package main
 
-import "github.com/NDoolan360/go-htmx-site/website/components"
-
 templ ExperienceTemplate(experience Experience) {
 	<li class="experience-item">
 		<span class="date-range">{ experience.DateStart } - { experience.DateEnd }</span>
 		<div>
 			<a class="experience-title" href={ experience.Link } target="_blank" rel="noreferrer">
-				@components.Logo(experience.Location)
-				<h3>{ experience.Location }</h3>
+				@experience.Location.Logo
+				<h3>{ experience.Location.Name }</h3>
 			</a>
 			for _, position := range experience.Positions {
 				<h4
@@ -22,7 +20,11 @@ templ ExperienceTemplate(experience Experience) {
 			if len(experience.Topics) > 0 {
 				<div class="topic-wrapper">
 					for _, topic := range experience.Topics {
-						<a class="chip" href={ topic.Link } target="_blank" rel="noreferrer">{ topic.Label }</a>
+						if topic.Link == "" {
+							<span class="chip">{ topic.Label }</span>
+						} else {
+							<a class="chip" href={ topic.Link } target="_blank" rel="noreferrer">{ topic.Label }</a>
+						}
 					}
 				</div>
 			}
