--- a/web/templates/layout.base.templ
+++ b/web/templates/layout.base.templ
@@ -1,4 +1,4 @@
-package layouts
+package templates
 
 templ BaseLayout(title string, description string, header templ.Component, main templ.Component) {
 	<!DOCTYPE html>
@@ -24,7 +24,7 @@ templ head(title string, description string) {
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 	<link rel="icon" href="/favicon.ico"/>
 	<!-- Styles -->
-	<link rel="stylesheet" href="/styles/styles.css"/>
+	<link rel="stylesheet" href="/styles.css"/>
 	<!-- Scripts -->
 	<script src="https://unpkg.com/htmx.org@1.9.12"></script>
 	<script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
