--- a/web/styles/styles.css
+++ b/web/styles/styles.css
@@ -779,6 +779,10 @@ h4:not(.current) {
   width: 2rem
 }
 
+.loader:not(.htmx-request) {
+  display: none;
+}
+
 @keyframes spin {
   to {
     transform: rotate(360deg)
