--- a/web/templates/layout.base.templ
+++ b/web/templates/layout.base.templ
@@ -1,10 +1,10 @@
 package templates
 
-templ BaseLayout(title string, description string, header templ.Component, main templ.Component) {
+templ BaseLayout(title string, description string, headTags templ.Component, header templ.Component, main templ.Component) {
 	<!DOCTYPE html>
 	<html lang="en" class="scroll-smooth">
 		<head>
-			@head(title, description)
+			@head(title, description, headTags)
 		</head>
 		<body class="dark">
 			if header != nil {
@@ -17,7 +17,7 @@ templ BaseLayout(title string, description string, header templ.Component, main 
 	</html>
 }
 
-templ head(title string, description string) {
+templ head(title string, description string, headTags templ.Component) {
 	<title>{ title }</title>
 	<meta name="description" content={ description }/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -28,7 +28,6 @@ templ head(title string, description string) {
 	<!-- Scripts -->
 	<script src="https://unpkg.com/htmx.org@1.9.12"></script>
 	<script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
-	<script type="module" src="https://cdn.jsdelivr.net/gh/zerodevx/zero-md@2/dist/zero-md.min.js"></script>
 	<!-- Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com"/>
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -42,14 +41,7 @@ templ head(title string, description string) {
 	<meta property="og:profile:first_name" content="Doolan"/>
 	<meta property="og:profile:gender" content="male"/>
 	<meta property="og:title" content="Nathan Doolan"/>
-	<meta property="og:image" content="/images/profile.webp"/>
-	<!-- PWA -->
-	<meta name="color-scheme" content="dark light"/>
-	<meta name="theme-color" content="#283c37"/>
-	<meta name="apple-mobile-web-app-status-bar" content="#283c37"/>
-	<link rel="apple-touch-icon" sizes="180x180" href="/images/icons/apple-touch-icon.png"/>
-	<link rel="icon" type="image/png" sizes="16x16" href="/images/icons/favicon-16x16.png"/>
-	<link rel="icon" type="image/png" sizes="32x32" href="/images/icons/favicon-32x32.png"/>
-	<link rel="manifest" href="/manifest.json" crossorigin="use-credentials"/>
-	<script src="/scripts/pwa.js"></script>
+	<meta property="og:image" content="/images/profile.avif"/>
+	<!-- Other -->
+	@headTags
 }
