--- a/web/templates/layout.base.templ
+++ b/web/templates/layout.base.templ
@@ -19,26 +19,18 @@ templ BaseLayout(title string, description string, headTags templ.Component, hea
 
 templ head(title string, description string, headTags templ.Component) {
 	<title>{ title }</title>
-	<meta name="description" content={ description }/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 	<link rel="icon" href="/favicon.ico"/>
-	<!-- Styles -->
 	<link rel="stylesheet" href="/styles.css"/>
-	<!-- Scripts -->
-	<script src="https://unpkg.com/htmx.org@1.9.12"></script>
-	<script src="https://unpkg.com/hyperscript.org@0.9.12"></script>
-	<!-- Fonts -->
-	<link rel="preconnect" href="https://fonts.googleapis.com"/>
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
 	<link href="https://fonts.googleapis.com/css2?family=Fragment+Mono:ital@0;1&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet"/>
 	<!-- OpenGraph -->
-	<meta property="og:description" content={ description }/>
+	<meta name="description" property="og:description" content={ description }/>
 	<meta property="og:locale" content="en_AU"/>
 	<meta property="og:url" content="https://n.doolan.dev"/>
 	<meta property="og:type" content="profile"/>
 	<meta property="og:profile:first_name" content="Nathan"/>
-	<meta property="og:profile:first_name" content="Doolan"/>
+	<meta property="og:profile:last_name" content="Doolan"/>
 	<meta property="og:profile:gender" content="male"/>
 	<meta property="og:title" content="Nathan Doolan"/>
 	<meta property="og:image" content="/images/profile.avif"/>
