refactor and update content

--- a/web/templates/component.logos.templ
+++ b/web/templates/component.logos.templ
@@ -85,8 +85,16 @@ templ ProquipLogo() {
 	</svg>
 }
 
-templ TailwindLogo() {
-	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54" id="logo" class="logo" aria-label="TailwindCSS Logo" style="max-width: 2rem;">
-		<path fill="#38bdf8" d="M27 10.8c-7.2 0-11.7 3.6-13.5 10.8 2.7-3.6 5.85-4.95 9.45-4.05 2.05.51 3.52 2 5.15 3.65 2.64 2.69 5.7 5.8 12.4 5.8 7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.05-.51-3.52-2-5.15-3.65-2.64-2.69-5.7-5.8-12.4-5.8ZM13.5 27C6.3 27 1.8 30.6 0 37.8c2.7-3.6 5.85-4.95 9.45-4.05 2.05.51 3.52 2 5.15 3.65 2.64 2.69 5.7 5.8 12.4 5.8 7.2 0 11.7-3.6 13.5-10.8-2.7 3.6-5.85 4.95-9.45 4.05-2.05-.51-3.52-2-5.15-3.65-2.64-2.69-5.7-5.8-12.4-5.8Z"></path>
+templ MdBlockLogo() {
+	<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100" id="logo" class="logo" aria-label="md-block Logo" style="max-width: 2rem;">
+		<style>
+	svg {
+		font-family: system-ui, sans-serif;
+		font-size: 70px;
+	}
+	</style>
+		<rect x="5" y="5" width="90" height="90" fill="none" stroke="black" stroke-width="8"></rect>
+		<text x="10" y="80" style="font-size: 130%">*</text>
+		<text x="40" y="85">#</text>
 	</svg>
 }
