--- a/web/styles/styles.css
+++ b/web/styles/styles.css
@@ -14,6 +14,7 @@ html,
   -moz-tab-size: 4;
   -o-tab-size: 4;
   tab-size: 4;
+  scroll-behavior: smooth;
   font-family: Josefin Sans, sans-serif;
   font-feature-settings: normal;
   font-variation-settings: normal;
@@ -256,116 +257,6 @@ body:not(.dark) {
   --primary: #0b7956;
   --secondary: #bcd3cc;
   --accent: #0b7956
-}
-
-*,
-::before,
-::after {
-  --tw-border-spacing-x: 0;
-  --tw-border-spacing-y: 0;
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-pan-x: ;
-  --tw-pan-y: ;
-  --tw-pinch-zoom: ;
-  --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position: ;
-  --tw-gradient-via-position: ;
-  --tw-gradient-to-position: ;
-  --tw-ordinal: ;
-  --tw-slashed-zero: ;
-  --tw-numeric-figure: ;
-  --tw-numeric-spacing: ;
-  --tw-numeric-fraction: ;
-  --tw-ring-inset: ;
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  --tw-blur: ;
-  --tw-brightness: ;
-  --tw-contrast: ;
-  --tw-grayscale: ;
-  --tw-hue-rotate: ;
-  --tw-invert: ;
-  --tw-saturate: ;
-  --tw-sepia: ;
-  --tw-drop-shadow: ;
-  --tw-backdrop-blur: ;
-  --tw-backdrop-brightness: ;
-  --tw-backdrop-contrast: ;
-  --tw-backdrop-grayscale: ;
-  --tw-backdrop-hue-rotate: ;
-  --tw-backdrop-invert: ;
-  --tw-backdrop-opacity: ;
-  --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia: ;
-  --tw-contain-size: ;
-  --tw-contain-layout: ;
-  --tw-contain-paint: ;
-  --tw-contain-style:
-}
-
-::backdrop {
-  --tw-border-spacing-x: 0;
-  --tw-border-spacing-y: 0;
-  --tw-translate-x: 0;
-  --tw-translate-y: 0;
-  --tw-rotate: 0;
-  --tw-skew-x: 0;
-  --tw-skew-y: 0;
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  --tw-pan-x: ;
-  --tw-pan-y: ;
-  --tw-pinch-zoom: ;
-  --tw-scroll-snap-strictness: proximity;
-  --tw-gradient-from-position: ;
-  --tw-gradient-via-position: ;
-  --tw-gradient-to-position: ;
-  --tw-ordinal: ;
-  --tw-slashed-zero: ;
-  --tw-numeric-figure: ;
-  --tw-numeric-spacing: ;
-  --tw-numeric-fraction: ;
-  --tw-ring-inset: ;
-  --tw-ring-offset-width: 0px;
-  --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
-  --tw-ring-offset-shadow: 0 0 #0000;
-  --tw-ring-shadow: 0 0 #0000;
-  --tw-shadow: 0 0 #0000;
-  --tw-shadow-colored: 0 0 #0000;
-  --tw-blur: ;
-  --tw-brightness: ;
-  --tw-contrast: ;
-  --tw-grayscale: ;
-  --tw-hue-rotate: ;
-  --tw-invert: ;
-  --tw-saturate: ;
-  --tw-sepia: ;
-  --tw-drop-shadow: ;
-  --tw-backdrop-blur: ;
-  --tw-backdrop-brightness: ;
-  --tw-backdrop-contrast: ;
-  --tw-backdrop-grayscale: ;
-  --tw-backdrop-hue-rotate: ;
-  --tw-backdrop-invert: ;
-  --tw-backdrop-opacity: ;
-  --tw-backdrop-saturate: ;
-  --tw-backdrop-sepia: ;
-  --tw-contain-size: ;
-  --tw-contain-layout: ;
-  --tw-contain-paint: ;
-  --tw-contain-style:
 }
 
 body {
@@ -611,9 +502,14 @@ footer {
   gap: 1.5rem
 }
 
-.heading h2 {
+h2 {
   font-family: Fragment Mono, mono;
-  font-size: 1.777rem
+  font-size: 1.75rem
+}
+
+h3 {
+  font-family: Fragment Mono, mono;
+  font-size: 1.25rem
 }
 
 .heading hr {
@@ -741,7 +637,7 @@ footer {
   display: flex;
   max-width: -moz-fit-content;
   max-width: fit-content;
-  flex-direction: row;
+  flex-direction: row-reverse;
   flex-wrap: nowrap;
   align-items: center;
   gap: .5rem;
@@ -813,9 +709,7 @@ h4:not(.current) {
 }
 
 .card:focus-visible {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
+  transform: scaleX(1.05);
 }
 
 @media(prefers-reduced-motion:reduce) {
@@ -824,26 +718,18 @@ h4:not(.current) {
   }
 
   .card:focus-visible {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
+    transform: scale(1);
   }
 }
 
 .card:hover {
-  --tw-scale-x: 1.05;
-  --tw-scale-y: 1.05;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y));
-  --tw-shadow: 0 0 12px 0px var(--primary);
-  --tw-shadow-colored: 0 0 12px 0px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+  transform: scale(1.05);
+  box-shadow: 0 0 12px 0px var(--primary)
 }
 
 @media(prefers-reduced-motion:reduce) {
   .card:hover {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
+    transform: scale(1);
   }
 }
 
@@ -936,9 +822,7 @@ h4:not(.current) {
 
 .btn:focus-visible,
 .chip:focus-visible {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
+  transform: scale(1.1);
 }
 
 @media(prefers-reduced-motion:reduce) {
@@ -950,9 +834,7 @@ h4:not(.current) {
 
   .btn:focus-visible,
   .chip:focus-visible {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
+    transform: scale(1);
   }
 }
 
@@ -976,24 +858,14 @@ a.chip {
 }
 
 a:is(.btn, .chip):hover {
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y));
-  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-  --tw-shadow-color: var(--background);
-  --tw-shadow: var(--tw-shadow-colored)
+  transform: scale(1.1);
+  box-shadow: 0 4px 6px -1px var(--background), 0 2px 4px -2px var(--background);
 }
 
 @media(prefers-reduced-motion:reduce) {
   a:is(.btn, .chip):hover {
-    --tw-scale-x: 1;
-    --tw-scale-y: 1;
-    transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y));
-    --tw-shadow: 0 0 #0000;
-    --tw-shadow-colored: 0 0 #0000;
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+    transform: scale(1);
+    box-shadow: 0 0 #0000;
   }
 }
 
@@ -1024,11 +896,10 @@ a:is(.btn, .chip):hover {
   padding-top: 1rem
 }
 
-:is(.experience-title, .card-title)::after {
+.experience-title::before,
+.card-title::after {
   content: "↗";
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y));
+  transform: scale(1.1);
   font-family: Fragment Mono, mono;
   opacity: 0;
   transition-property: opacity;
@@ -1037,93 +908,86 @@ a:is(.btn, .chip):hover {
 }
 
 @media(prefers-reduced-motion:reduce) {
-  :is(.experience-title, .card-title)::after {
+
+  .experience-title::before,
+  .card-title::after {
     transition-duration: 0s
   }
 }
 
 .card:hover .card-title::after,
-.experience-title:hover::after {
+.experience-title:hover::before {
   opacity: 1
 }
 
 a:is(.chip, .btn)::after {
   content: "↗";
-  --tw-scale-x: 1.1;
-  --tw-scale-y: 1.1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y));
+  transform: scale(1.1);
   font-family: Fragment Mono, mono
 }
 
-.mx-8 {
+p a:not(.btn, .chip) {
+  color: var(--primary);
+}
+
+#markdown {
+  max-width: 100%;
   margin-left: 2rem;
-  margin-right: 2rem
-}
-
-.flex {
-  display: flex
-}
-
-.w-fit {
-  width: -moz-fit-content;
-  width: fit-content
-}
-
-.max-w-full {
-  max-width: 100%
-}
-
-.transform {
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y))rotate(var(--tw-rotate))skewX(var(--tw-skew-x))skewY(var(--tw-skew-y))scaleX(var(--tw-scale-x))scaleY(var(--tw-scale-y))
-}
-
-.flex-row {
-  flex-direction: row
-}
-
-.items-center {
-  align-items: center
-}
-
-.justify-between {
-  justify-content: space-between
-}
-
-.scroll-smooth {
-  scroll-behavior: smooth
-}
-
-.px-0 {
+  margin-right: 2rem;
   padding-left: 0;
-  padding-right: 0
-}
+  padding-right: 0;
 
-.text-primary {
-  color: var(--primary)
-}
+  a:not(.btn, .chip) {
+    color: var(--primary);
+    text-decoration-line: underline;
+  }
 
-.underline {
-  text-decoration-line: underline
-}
+  section:first-of-type {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(.4, 0, .2, 1);
-  transition-duration: 150ms
+    a {
+      color: var(--text);
+      text-decoration: none;
+    }
+  }
 }
 
 @media(min-width:768px) {
-  .md\:mx-16 {
+  #markdown {
     margin-left: 4rem;
     margin-right: 4rem
   }
 }
 
 @media(min-width:1024px) {
-  .lg\:mx-32 {
+  #markdown {
     margin-left: 8rem;
     margin-right: 8rem
   }
+}
+
+@media print {
+  #markdown footer {
+    display: none;
+  }
+}
+
+md-block>h2 {
+  padding-top: 2rem;
+}
+
+md-block>h3 {
+  padding-top: 1rem;
+}
+
+md-block>ul {
+  list-style: unset;
+  padding-left: 1rem;
+}
+
+md-block progress {
+  padding-left: 1rem;
 }
